Fix mobile alt-index alignment issue

--- a/app/states/root/section-state/_section-state_styles.scss
+++ b/app/states/root/section-state/_section-state_styles.scss
@@ -241,6 +241,7 @@
 	}
 	@include respond-to( 'small' )
 	{
+		width: 350px;
 		margin-top: 44px;
 		padding: 0;
 	}
